@@ -231,6 +231,7 @@ EVENTS
 • Creating or updating a progress message with |nvim_echo()| triggers a |Progress| event.
 • |MarkSet| is triggered after a |mark| is set by the user (currently doesn't
   support implicit marks like |'[| or |'<|, …).
+• New `terminator` parameter for |TermRequest| event.
 
 HIGHLIGHTS
 
